--- a/JSA 02/d2.css
+++ b/JSA 02/d2.css
@@ -98,3 +98,47 @@ header nav ul {
 .btn2:hover {
     background-color: rgba(255, 255, 255, 0.3);
 }
+
+.title {
+    text-transform: uppercase;
+    font-size: 40px; 
+    font-weight: 100;
+    margin: 60px 0px 25px 0px;
+    display: flex;
+    justify-content: center;
+}
+
+.line {
+    width: 9%;
+    height: 2px;
+    margin: auto;
+    margin-bottom: 25px;
+    background-color: orange;
+    border-radius: 25px;
+}
+
+.words {
+    font-weight: 100;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.bcontainer {
+    width: 70%;
+    font-weight: 200;
+    margin: auto;
+    margin-top: 25px;
+    display: flex;
+    justify-content: space-between;
+}
+.bcontainer div {
+    width: 24%;
+    line-height: 2;
+}
+
+.bcontainer .lg {
+    font-size: 20px;
+    text-transform: uppercase;
+
+}
