--- a/JSA 02/index.css
+++ b/JSA 02/index.css
@@ -239,3 +239,18 @@ header nav ul {
 .cities-item img {
     width: 100%;
 }
+
+.cities-item p {
+    text-transform: uppercase;
+    font-size: 20px;
+}
+
+.cities-item i {
+    color: orange;
+}
+
+.cities-item {
+    margin-top: 50px;
+    line-height: 2;
+    font-weight: 200;
+}
